--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "phpoffice/phpword": "^1.3",
-        "sanjaya/laravel-daisyui-starter": "v1.0"
+        "sanjaya/laravel-daisyui-starter": "v1.0",
+        "spatie/laravel-pdf": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
